--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "luxon": "^3.4.4",
     "mongoose": "^8.0.3",
     "morgan": "~1.9.1"
   },
