--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "prop-types": "^15.8.1",
